--- a/.github/actions/test/action.yaml
+++ b/.github/actions/test/action.yaml
@@ -27,7 +27,7 @@ runs:
         activate-environment: test-env
     - name: Install dependencies
       shell: bash -el {0}
-      env: 
+      env:
         PYTORCH_VERSION: ${{ inputs.pytorch-version }}
       run: |
         mamba install pytorch=${PYTORCH_VERSION} pytest
@@ -35,4 +35,4 @@ runs:
       shell: bash -el {0}
       run: |
         pip install .
-        pytest pytest --pyargs interpol
+        pytest pytest --pyargs bounds
