MNR(actions): try ti debug

--- a/.github/actions/test/action.yaml
+++ b/.github/actions/test/action.yaml
@@ -35,4 +35,5 @@ runs:
       shell: bash -el {0}
       run: |
         pip install ".[test]"
-        pytest --pyargs bounds
+        python -c "import bounds; print(bounds.__version__)"
+        pytest
