--- a/.github/actions/pypi/action.yaml
+++ b/.github/actions/pypi/action.yaml
@@ -16,7 +16,7 @@ inputs:
     # {pypi, test, test+pypi}
   pypi-password:
     required: true
-  test-password: 
+  test-password:
     required: true
 runs:
   using: "composite"
@@ -32,7 +32,7 @@ runs:
     - name: Install dependencies for building package
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel twine versioneer[toml]
       shell: bash
     - name: Build a binary wheel and a source tarball
       run: |
