--- a/.github/workflows/publish-conda-from-pypi.yaml
+++ b/.github/workflows/publish-conda-from-pypi.yaml
@@ -23,6 +23,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/conda-from-pypi
         with:
           tag: ${{ inputs.tag }}
