MNT(actions): try to fix meta.yaml

--- a/.github/actions/conda-from-pypi/action.yaml
+++ b/.github/actions/conda-from-pypi/action.yaml
@@ -61,12 +61,12 @@ runs:
       json = requests.get(f"https://pypi.org/pypi/{package}/{tag}/json").json()
       summary = json["info"].get("summary", "")
       with open(os.environ["GITHUB_ENV"], "a") as f:
-        f.write(f"PYPI_SUMMARY=\"{summary}\"\n")
+        f.write(f"PYPI_SUMMARY={summary}\n")
       for url in json["urls"]:
           if url["packagetype"] == "sdist":
               sha256 = url["digests"]["sha256"]
               with open(os.environ["GITHUB_ENV"], "a") as f:
-                f.write(f"PYPI_SHA256=\"{sha256}\"\n")
+                f.write(f"PYPI_SHA256={sha256}\n")
               break
       '
   - name: Create meta.yaml
@@ -85,7 +85,7 @@ runs:
 
       source:
         url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-        sha256: "$PYPI_SHA256"
+        sha256: $PYPI_SHA256
 
       build:
         number: 0
@@ -107,7 +107,7 @@ runs:
       about:
         home: https://github.com/balbasty/{{ name }}
         license: MIT
-        summary: "$PYPI_SUMMARY"
+        summary: $PYPI_SUMMARY
         dev_url: https://github.com/balbasty/{{ name }}
       EOL
   - name: Build
